--- a/_sass/_page-content.scss
+++ b/_sass/_page-content.scss
@@ -90,3 +90,10 @@
     list-style-type: none;
     text-align: left;
 }
+
+.footnotes{
+    font-size: $small-print-size;
+    font-weight: $thin-font-weight;
+    margin-bottom: 0;
+
+}
