changed head title

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if page.title %}{{ page.title }}{% endif %} – {{ site.title }}</title>
+    <title>{{ site.title }}{% if page.title %}&#151;{{ page.title }}{% endif %}</title>
     {% if site.data.locales[page.lang].description %}<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | truncate: 160 }}{% else %}{{ site.data.locales[page.lang].description }}{% endif %}">{% endif %}
 
     {% if site.loadCSS_js %}
