change about section content

--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -33,7 +33,7 @@ $background-color:      #f7f7f7;
 
 $alt-color:             #005;
 
-$ui-color:              #00002c;
+$ui-color:              #000025;
 $ui-color-dark:         darken($ui-color, 30%);
 
 
