--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ site.title }}{% if page.title %}&#151;{{ page.title }}{% endif %}</title>
+    <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
     {% if site.data.locales[page.lang].description %}<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | truncate: 160 }}{% else %}{{ site.data.locales[page.lang].description }}{% endif %}">{% endif %}
 
     {% if site.loadCSS_js %}
@@ -19,7 +19,7 @@
     {% endif %}
     
     <!--    Load fonts from "brick.im" -->
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato: 200,300,300i,400,400i,600,600i,800,800i/Inconsolata:400">
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato: 200,300,300i,400,400i,600,600i,800,800i/Inconsolata:500">
 
 
     <link rel="icon" href="/img/icon.png">
