--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 {% include _head.html %}
 
-<body class="page">
+<body class="page"light-font-weight>
     <header class="site-head">
     <div class="wrapper">
 
