--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -1,6 +1,8 @@
 /**
  * Typography
  */
+$small-print-size:  12px;
+$small-font-size:   15px;
 $base-font-size:    18px;
 $base-line-height:  28px;
 $title-font-family: 'Inconsolata', monospace ;
@@ -20,7 +22,7 @@ $h4-size:           22px;
 $h5-size:           18px;
 $h6-size:           14px;
 
-$small-print-size:  14px;
+
 
 
 
