--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <article class="post">
+    <center>
     <ul class="meta-list">
         <li>
             {% include _date.html date=post.date %}
@@ -11,7 +12,7 @@ layout: default
         <li><a href="/tags#{{ tag }}">{{ tag }}</a></li>
         {% endfor %}
     </ul>
-
+    </center>
     <h1>{{ page.title }}</h1>
 
     {{ content }}
