Remove margin from footnotes

--- a/_sass/_page-content.scss
+++ b/_sass/_page-content.scss
@@ -96,4 +96,11 @@
     font-weight: $thin-font-weight;
     margin-bottom: 0;
 
+    li > p {
+        margin-bottom: 0;
+    }
+}
+
+.reversefootnote {
+    text-decoration: none;
 }
