--- a/_includes/_date.html
+++ b/_includes/_date.html
@@ -1,66 +1,9 @@
-{% if include.mode != 'month' %}
-    {% if post %}
-        {% assign d = post.date | date: "%-d" %}
-    {% else %}
-        {% assign d = page.date | date: "%-d" %}
-    {% endif %}
-  {% if page.lang == 'de' %}
-    {{ d }}.
-  {% else %}
-    {{ d }}<sup>{% case d %}
-      {% when '1' or '21' or '31' %}st
-      {% when '2' or '22' %}nd
-      {% when '3' or '23' %}rd
-      {% else %}th
-    {% endcase %}</sup> 
-  {% endif %}
-{% endif %}
-
-
-{% if post %}
-    <time datetime="{{ post.date | date: '%Y-%m-%d' }}">
-        {% if post.lang == 'de' %}
-            {% assign month = post.date | date: '%-m' %}
-            {% case month %}
-                {% when '1' %}Januar
-                {% when '2' %}Februar
-                {% when '3' %}März
-                {% when '4' %}April
-                {% when '5' %}Mai
-                {% when '6' %}Juni
-                {% when '7' %}Juli
-                {% when '8' %}August
-                {% when '9' %}September
-                {% when '10' %}Oktober
-                {% when '11' %}November
-                {% when '12' %}Dezember
-            {% endcase %}
-        {% else %}
-            {{ post.date | date: ' %B, ' }}
-        {% endif %}
-        {{ post.date | date: '%Y' }}
-    </time>
-{% else %}
-    <time class="timestamp" datetime="{{ page.date | date: '%Y-%m-%d' }}">
-        {% if page.lang == 'de' %}
-            {% assign month = page.date | date: '%-m' %}
-            {% case month %}
-                {% when '1' %}Januar
-                {% when '2' %}Februar
-                {% when '3' %}März
-                {% when '4' %}April
-                {% when '5' %}Mai
-                {% when '6' %}Juni
-                {% when '7' %}Juli
-                {% when '8' %}August
-                {% when '9' %}September
-                {% when '10' %}Oktober
-                {% when '11' %}November
-                {% when '12' %}Dezember
-            {% endcase %}
-        {% else %}
-            {{ page.date | date: ' %B, ' }}
-        {% endif %}
-        {{ page.date | date: '%Y' }}
-    </time>
-{% endif %}
+{% assign d = include.date | date: "%-d" %}
+{{ d }}<sup>{% case d %}
+    {% when '1' or '21' or '31' %}st
+    {% when '2' or '22' %}nd
+    {% when '3' or '23' %}rd
+    {% else %}th
+{% endcase %}</sup>
+{{ include.date | date: "%B"}}
+{{ include.date | date: "%Y"}}
