--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -19,8 +19,7 @@
     {% endif %}
     
     <!--    Load fonts from "brick.im" -->
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato: 200,300,300i,400,400i,600,600i,800,800i/Inconsolata:500">
-
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato: 300,300i,400,400i,600,600i/Inconsolata:500">
 
     <link rel="icon" href="/img/icon.png">
     <link rel="icon" href="/img/icon.svg" sizes="any" type="image/svg+xml">
