--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -20,27 +20,17 @@ p {
  */
 h1, h2, h3, h4, h5, h6 {
     color: $ui-color;
-    
-    &,
-    > a {
-        //font-weight: $bold-font-weight;
-    }
+    margin-bottom: 5px;
 }
 
 h1 {
     @include font-size($h1-size);
     text-align: center;
-    font-weight: $extrabold-font-weight;
     font-style: italic;
-
 }
 
 h2 {
     @include font-size($h2-size);
-    margin-top: 10px;
-    margin-bottom: 0;
-    line-height: normal;
-
 }
 
 h3 {
@@ -60,13 +50,12 @@ h6 {
 }
 
 .title-light {
-    font-weight: $thin-font-weight;
-    font-style: normal;
+    font-weight: $light-font-weight;
     color: $grey;
 }
 
 .index-title {
-    font-weight: $extrabold-font-weight;
+    font-weight: $bold-font-weight;
     font-style: italic;
 }
 
@@ -161,10 +150,6 @@ pre {
         color: #fff;
         white-space: pre;
     }
-}
-
-.grey  {
-    color: $grey;
 }
 
 .small {
