--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -1,19 +1,19 @@
 /**
  * Typography
  */
-$small-print-size:  12px;
-$small-font-size:   15px;
-$base-font-size:    18px;
-$base-line-height:  28px;
+
 $title-font-family: 'Inconsolata', monospace ;
 $base-font-family:  'Lato', sans-serif;
 
-$thin-font-weight:       200;
 $light-font-weight:      300;
 $base-font-weight:       400;
 $bold-font-weight:       600;
-$extrabold-font-weight:  800;
 
+$base-line-height:  28px;
+
+$small-print-size:  12px;
+$small-font-size:   15px;
+$base-font-size:    18px;
 
 $h1-size:           38px;
 $h2-size:           30px;
@@ -30,7 +30,7 @@ $h6-size:           14px;
  * Colors
  */
 $text-color:            #002;
-$grey:                  #ddd;
+$grey:                  #A7A7B7;
 $background-color:      #f7f7f7;
 
 $alt-color:             #005;
