--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ disqus: true
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'pitscher';
-    var disqus_developer = 1; // Comment out when the site is live
+    //var disqus_developer = 1; // Comment out when the site is live
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
