--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -2,8 +2,8 @@
  * Typography
  */
 
-$title-font-family: 'Inconsolata', monospace ;
-$base-font-family:  'Lato', sans-serif;
+$title-font-family: "Inconsolata", monospace;
+$base-font-family:  "Arial", sans-serif;
 
 $light-font-weight:      300;
 $base-font-weight:       400;
