--- a/css/style.css
+++ b/css/style.css
@@ -14,29 +14,48 @@ body {
 }
 
 #main {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-ms-flex-flow: row;
 	flex-flow: row;
+	-webkit-box-align: start;
+	-ms-flex-align: start;
 	align-items: flex-start;
 }
 
 #main > .wrapper-left {
+	-webkit-box-ordinal-group: 3;
+	-ms-flex-order: 2;
 	order: 2;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
 	width: 25%;
 }
 
 #main > .wrapper-right {
+	-webkit-box-ordinal-group: 4;
+	-ms-flex-order: 3;
 	order: 3;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
 	width: 25%;
 }
 
 #main >.sidebar-right {
+	-webkit-box-ordinal-group: 5;
+	-ms-flex-order: 4;
 	order: 4;
 	width: 25%;
 }
 
 #main > .sidebar-left {
+	-webkit-box-ordinal-group: 2;
+	-ms-flex-order: 1;
 	order: 1;
 	width: 25%;
 }
@@ -86,27 +105,40 @@ p {
 		min-width: 300px;
 	}
 	#main {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-ms-flex-flow: column-reverse;
 		flex-flow: column-reverse;
+		-webkit-box-align: start;
+		-ms-flex-align: start;
 		align-items: flex-start;
 		
 	}
 	#main > .wrapper-left {
+		-webkit-box-ordinal-group: 3;
+		-ms-flex-order: 2;
 		order: 2;
 		width: 100%;
 		max-width: 500px;
 	}
 	#main > .wrapper-right {
+		-webkit-box-ordinal-group: 4;
+		-ms-flex-order: 3;
 		order: 3;
 		width: 100%;
 		max-width: 500px;
 	}
 	#main >.sidebar-right {
+		-webkit-box-ordinal-group: 5;
+		-ms-flex-order: 4;
 		order: 4;
 		width: 100%;
 		
 	}
 	#main > .sidebar-left {
+		-webkit-box-ordinal-group: 2;
+		-ms-flex-order: 1;
 		order: 1;
 		width: 100%;
 		max-width: 500px;
