--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ p {
 	height: 100%;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 	body {
 		min-width: 300px;
 	}
